--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Quiz História do Acre",
-  "short_name": "Quiz Acre",
-  "start_url": ".",
+  "name": "Quiz HistÃ³ria do Acre",
+  "short_name": "QuizAcre",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#2196f3",
   "theme_color": "#2196f3",
   "icons": [
     {
